<resources>
    <string name="app_name">Slate</string>
    <string name="apply_settings">Apply settings</string>
    <string name="empty_radius_field_error">Radius field cannot be empty</string>
    <string name="proces_radius_error">Cannot process radius</string>
    <string name="saved_settings_message">Settings saved successfully</string>
    <string name="in_area_status">In area status:</string>
    <string name="area_wifi_access_point_name">Area Wifi access point name</string>
    <string name="area_radius_size_in_meters">Area radius size (in meters)</string>
    <string name="location_security_excetion_toast">Cannot obtain location because of security permissions. Please, check app\'s permissions</string>
    <string name="slate_area_configurations">Slate area configurations</string>
    <string name="done">Done</string>
    <string name="use_location_on_map_for_area">Use location on map for area</string>
    <string name="area_info_location_save_error">Area info not loaded for save</string>
    <string name="information_of_slate_area">Information of Slate area</string>
    <string name="location_settings_available_error">Cannot check location settings</string>
    <string name="location_settings_change_error">Cannot check location settings</string>
    <string name="fix_location_settings_manually_message">Location settings updated by app. Fix in Settings.</string>
    <string name="denided_permission_message">Need location permissions for work</string>
    <string name="attention">Attention</string>
    <string name="wifi_required_on_disabled_area_message">Wifi access point required when location area disabled</string>
    <string name="configuration">Configuration</string>
    <string name="geofence_area">Geofence area</string>
</resources>
