<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.slate.activities.MainActivity">

    <EditText
        android:layout_marginTop="@dimen/default_views_margin"
        android:hint="@string/area_wifi_access_point_name"
        android:layout_marginStart="@dimen/default_views_margin"
        android:layout_marginEnd="@dimen/default_views_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/wifi_network_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:hint="@string/area_radius_size_in_meters"
        android:layout_marginTop="@dimen/default_views_margin"
        android:layout_marginStart="@dimen/default_views_margin"
        android:layout_marginEnd="@dimen/default_views_margin"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifi_network_name_edit_text"
        android:id="@+id/radius_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginTop="@dimen/default_views_margin"
        android:layout_marginStart="@dimen/default_views_margin"
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_settings"
        android:textColor="@android:color/black"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radius_edit_text" />

    <TextView
        android:layout_marginEnd="@dimen/default_views_margin"
        android:text="@string/in_area_status"
        android:textColor="@android:color/black"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/status_view"
        app:layout_constraintTop_toTopOf="@+id/save_button"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_marginEnd="@dimen/default_views_margin"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save_button"
        app:layout_constraintBottom_toBottomOf="@+id/save_button"
        android:id="@+id/status_view"
        android:layout_width="@dimen/area_sign_view_size"
        android:layout_height="@dimen/area_sign_view_size"/>

    <android.support.constraint.Guideline
        android:id="@+id/map_guide_line"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />
    <fragment
        android:id="@+id/map_fragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_button" />

</android.support.constraint.ConstraintLayout>
