<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@id/toolbar"
        android:background="?attr/colorPrimary"
        android:theme="@style/AppTheme.ToolbarIcons"
        android:layout_width="match_parent"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        android:layout_height="?attr/actionBarSize"/>

    <TextView
        android:id="@+id/startup_header"
        android:gravity="center"
        android:textSize="@dimen/start_up_header_text_size"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/default_views_margin"
        android:text="@string/slate_area_configurations"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/default_views_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startup_header"
        android:id="@+id/wifi_network_name_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:maxLines="1"
            android:singleLine="true"
            android:id="@+id/wifi_network_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/area_wifi_access_point_name" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:text="@string/use_location_on_map_for_area"
        android:id="@+id/location_area_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wifi_network_name_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_marginTop="@dimen/default_views_margin"
        android:background="@color/colorAccent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_area_checkbox"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <fragment
            android:id="@id/map_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.app.slate.views.AreaOverlayView
            android:id="@+id/area_overlay_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:radius="100dp" />
    </FrameLayout>

</android.support.constraint.ConstraintLayout>